Windows bug still there